added mastodon verification link

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>x025</title>
-    <link rel="stylesheet" href="./style.css" type="text/css" />
-    <style type="text/css">.body { width: auto; }</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   	<title>x025</title>
+    	<link rel="stylesheet" href="./style.css" type="text/css" />
+    	<a rel="me" href="https://linuxrocks.online/@x025"></a>
+	<style type="text/css">.body { width: auto; }</style>
   </head>
   <body>
 	  <center>
