#2 and localized images

--- a/index.html
+++ b/index.html
@@ -18,10 +18,16 @@
 		   <b><a href="https://github.com/ecks025">GitHub</a></b>
 		  <br>
 		  <hr>
+		  <b>#2 - Rocket Launchers</b><br>
+		  See some context here
+		  <br>
+		  <img src="comic2.png" height=420
+		  title"As long as I get my tacos, it's fine.">
+		  <hr width=45%>
 		  <b>#1 - Fonts</b><br>
 		  (we also have alt-text)
 		  <br>
-		  <img src="https://i.ibb.co/LY9qk1R/comic1.png" height=420
+		  <img src="comic1.png" height=420
 		  title="We also have alt-text, that can't be handwritten.">
 	  </div>
   </body>
