fixed link for #2

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		  <br>
 		  <hr>
 		  <b>#2 - Rocket Launchers</b><br>
-		  See some context here
+		  <a href="https://nitter.eu/seanhecht/status/1493432613628825600">See some context here</a>
 		  <br>
 		  <img src="comic2.png" height=420
 		  title"As long as I get my tacos, it's fine.">
